--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -443,6 +443,19 @@ header a {
     float: right;
 }
 
+.edit-uploaddiv{
+    width: 100%;
+    height: 200px;
+    background: #ccc;
+    display: inline-block;
+}
+.editbox-textarea{
+    width: 100%;
+    height: 300px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
 .loading{
     position: absolute;
     width: 100%;
@@ -456,4 +469,18 @@ header a {
 }
 .index-case > .glyphicon{
     font-size: 20px;
+}
+
+.tip{
+    position: fixed;
+    z-index: 55;
+    top: 60px;
+    width: 100%;
+    text-align: center;
+}
+.tip span{
+    background:rgba(0,0,0,0.7);background:#000\9;filter:alpha(opacity=20)\9;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
