一个小版本

--- a/resources/templates/index.html
+++ b/resources/templates/index.html
@@ -22,7 +22,9 @@
 <script type="text/javascript">
     var context = "";
     var ystoken = "{{ystoken}}";
+    var view = null;
 </script>
+<script src="/js/iscroll-probe.js" type="text/javascript"></script>
 <script src="/js/out/goog/base.js" type="text/javascript"></script>
 <script src="/js/app.js" type="text/javascript"></script>
 <script type="text/javascript">
