--- a/resources/public/css/app.css
+++ b/resources/public/css/app.css
@@ -32,7 +32,7 @@ a:hover, a:focus { background:rgba(0,0,0,0.1);background:#000\9;filter:alpha(opa
 .success-text{color: #3e8f3e;}
 
 /*              Loading            */
-.loading{position: absolute; width: 100%; text-align: center; top: 200px; }
+.loading{position: absolute; width: 100%; text-align: center; top: 200px; z-index: 5;}
 
 
 /*              Panel            */
@@ -45,9 +45,9 @@ a:hover, a:focus { background:rgba(0,0,0,0.1);background:#000\9;filter:alpha(opa
 /*              Navbar            */
 .navbarr{position: fixed; padding: 0 5px; top: 0;color: #fff; z-index: 50;}
 .navbarr > a{padding: 10px; display: inline-block;color: #fff;}
-.navbarr-title{line-height: 40px;margin-left: 10px;}
-.navbarr-back{float: left;}
-.navbarr-more{float: right;}
+.navbarr-title{line-height: 40px;text-align: center;display: inline-block;width: 100%;}
+.navbarr-back{position: absolute;}
+.navbarr-more{position: absolute; margin-left: -30px;}
 
 
 /*              Fastmenu            */
@@ -131,7 +131,6 @@ a:hover, a:focus { background:rgba(0,0,0,0.1);background:#000\9;filter:alpha(opa
 .searchbox-title{color: #666; font-size: 14px;}
 .searchbox-list{}
 .searchbox-tag{display: inline-block; background: #fff; padding: 10px 20px; margin-right: 15px; margin-top: 10px; font-size: 12px;}
-
 
 
 
@@ -243,8 +242,10 @@ a:hover, a:focus { background:rgba(0,0,0,0.1);background:#000\9;filter:alpha(opa
 }
 
 /*              scroll-wrapper           */
-.scroll-wrapper{position: absolute; width: 100%;height: 100%; overflow: scroll;}
-.scroller{padding: 40px 0 65px 0;}
+.scroll-wrapper{position: absolute; width: 100%;height: 100%; overflow: hidden;}
+.scroller{padding: 40px 0 65px 0;position: absolute;width: 100%;-webkit-transform:translate3d(0,0,0);}
+
+
 
 .testblock{width: 100%; height: 300px;}
 .testblock.red{background: red;}
