--- a/Application/Phone/View/Index/index.html
+++ b/Application/Phone/View/Index/index.html
@@ -10,28 +10,32 @@
 <block name="script">
     <script src="__PUBLIC__/js/swiper.min.js"></script>
     <script>
-        var swiper = new Swiper('.swiper-container', {
+        var ad = new Swiper('#adbox', {
             pagination: '.swiper-pagination',
             paginationClickable: true,
             autoplay: 2500
+        });
+        var cate = new Swiper('#cate', {
+            pagination: '.swiper-pagination',
+            paginationClickable: true
         });
     </script>
 </block>
 
 <block name="content">
-    <div class="topnavbar">
-        <a href="#" class="backbtn">
+    <div class="topnavbar flex flex-align-center">
+        <a href="javascript:" class="backbtn" onclick="window.history.back();">
             北流
         </a>
+        <div class="pagetitle flex-1"><a class="searchbtn" href="{:UC('Index/search')}"><i class="iconfont">&#xe601;</i>搜索商品，找单，店铺</a></div>
         <a href="#" class="rightbtn">
             <i class="iconfont">&#xe619;</i>
         </a>
-        <div class="pagetitle"><span class="searchbtn"><i class="iconfont">&#xe601;</i>搜索商品，找单，店铺</span></div>
     </div>
 
     <div class="main-container">
         <!-- 首页广告 start -->
-        <div class="adbox swiper-container">
+        <div class="adbox swiper-container" id="adbox">
             <div class="swiper-wrapper">
                 <a href="#" class="adbox-item swiper-slide"><img src="__PUBLIC__/images/banner.jpg"/></a>
                 <a href="#" class="adbox-item swiper-slide"><img src="__PUBLIC__/images/banner.jpg"/></a>
@@ -40,7 +44,7 @@
         <!-- 首页广告 end -->
 
         <!-- 首页分类 start -->
-        <div class="index-cate panel swiper-container">
+        <div class="index-cate panel swiper-container" id="cate">
             <div class="swiper-wrapper">
                 <div class="swiper-slide index-cate-page">
                     <a class="index-cate-item" href="#">
@@ -115,48 +119,42 @@
         </div>
         <!-- 首页分类 end -->
 
+        <div class="margin-top"></div>
         <!-- 推荐列表 start -->
         <div class="box panel">
             <h3><i class="iconfont">&#xe617;</i>推荐找单<a href="#" class="morebtn">更多</a></h3>
             <div class="list">
-                <a class="item default-item" href="{:UC('Index/groupinfo')}">
+                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
                     <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info">
+                    <div class="item-info flex-1">
                         <h3>新春大红包</h3>
                         <p class="desc">新年快到了，你的红包准备好了吗？送长辈送好友送孩子，每种红包都是不一样的，点击了解详情吧。</p>
                     </div>
                 </a>
-                <a class="item default-item" href="{:UC('Index/groupinfo')}">
+                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
                     <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info">
+                    <div class="item-info flex-1">
                         <h3>新春大红包</h3>
                         <p class="desc">新年快到了，你的红包准备好了吗？送长辈送好友送孩子，每种红包都是不一样的，点击了解详情吧。</p>
                     </div>
                 </a>
-                <a class="item default-item" href="{:UC('Index/groupinfo')}">
+                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
                     <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info">
+                    <div class="item-info flex-1">
                         <h3>新春大红包</h3>
                         <p class="desc">新年快到了，你的红包准备好了吗？送长辈送好友送孩子，每种红包都是不一样的，点击了解详情吧。</p>
                     </div>
                 </a>
-                <a class="item default-item" href="{:UC('Index/groupinfo')}">
+                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
                     <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info">
+                    <div class="item-info flex-1">
                         <h3>新春大红包</h3>
                         <p class="desc">新年快到了，你的红包准备好了吗？送长辈送好友送孩子，每种红包都是不一样的，点击了解详情吧。</p>
                     </div>
                 </a>
-                <a class="item default-item" href="{:UC('Index/groupinfo')}">
+                <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
                     <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info">
-                        <h3>新春大红包</h3>
-                        <p class="desc">新年快到了，你的红包准备好了吗？送长辈送好友送孩子，每种红包都是不一样的，点击了解详情吧。</p>
-                    </div>
-                </a>
-                <a class="item default-item" href="{:UC('Index/groupinfo')}">
-                    <img src="__PUBLIC__/images/head.jpg" class="item-img">
-                    <div class="item-info">
+                    <div class="item-info flex-1">
                         <h3>新春大红包</h3>
                         <p class="desc">新年快到了，你的红包准备好了吗？送长辈送好友送孩子，每种红包都是不一样的，点击了解详情吧。</p>
                     </div>
@@ -183,7 +181,6 @@
         <!-- demo end -->
 
     </div>
-
 
 
 </block>
