--- a/Application/Phone/View/Index/groupinfo.html
+++ b/Application/Phone/View/Index/groupinfo.html
@@ -3,7 +3,7 @@
 <block name="css">
     <link rel="stylesheet" href="__PUBLIC__/css/swiper.min.css">
     <style>
-        .swiper-pagination-bullet-active{background: red;}
+        .swiper-pagination-bullet-active{background: #04be02;}
     </style>
 </block>
 
@@ -61,14 +61,14 @@
             <div class="swiper-pagination"></div>
         </div>
     </div>
-    <div class="topnavbar">
+    <div class="topnavbar flex flex-align-center">
         <a href="javascript:" class="backbtn" onclick="window.history.back();">
             <i class="iconfont">&#xe612;</i>
         </a>
+        <div class="pagetitle flex-1">找单详情信息</div>
         <a href="#" class="rightbtn">
             <i class="iconfont">&#xe619;</i>
         </a>
-        <div class="pagetitle">找单详情信息</div>
     </div>
 
     <div class="main-container">
@@ -77,7 +77,9 @@
                 <img src="__PUBLIC__/images/head.jpg" class="detail-bannerbox-img">
                 <div class="detail-bannerbox-info">
                     <h3>新春大红包新春大红包</h3>
-                    <a href="#" class="detail-bannerbox-author"><img src="__PUBLIC__/images/head.jpg">夜声<i class="iconfont">&#xe61a;</i></a>
+                    <a href="{:UC('Index/usercenter')}" class="detail-bannerbox-author">
+                        <img src="__PUBLIC__/images/head.jpg">夜声<i class="iconfont">&#xe61a;</i>
+                    </a>
                 </div>
             </div>
             <div class="detail-bannerbox-btns">
@@ -90,7 +92,9 @@
 
         <div class="margin-top"></div>
         <!-- detail btn start -->
-        <button class="btn-block" id="showdetail">查看详情</button>
+        <div class="boxcontent">
+            <button class="weui_btn weui_btn_primary" id="showdetail">查看详情</button>
+        </div>
         <!-- detail btn end -->
 
         <div class="margin-top"></div>
@@ -148,7 +152,7 @@
 
         <div class="footer detail-pricebox">
             <span class="group-good-price">总价：<strong>￥50元</strong></span>
-            <button class="btn-inline-block">联系制单人</button>
+            <a href="#" class="weui_btn weui_btn_mini weui_btn_primary text-align">联系制单人</a>
         </div>
     </div>
 </block>
