--- a/Application/Phone/View/User/index.html
+++ b/Application/Phone/View/User/index.html
@@ -39,30 +39,36 @@
     <div class="main-container">
         <div class="userinfobox">
             <img src="__PUBLIC__/images/head.jpg" class="userinfobox-img">
-            <div class="userinfobox-scorebox">
-                <strong>yesheng</strong>
+            <div class="userinfobox-scorebox ">
                 <h3>影响力:55664分</h3>
             </div>
-            <a href="#" class="shortbox default-text"><i class="iconfont">&#xe625;</i> 关注ta</a>
-        </div>
-
-        <div class="margin-top"></div>
-        <div class="boxcontent">
-            <button class="weui_btn weui_btn_plain_primary">联系ta</button>
-        </div>
-
-        <div class="margin-top"></div>
-        <div class="panel box">
-            <h3 class="title">个人说明</h3>
-            <div class="foldbox list">
-                <p class="item">123415465456新春大红包新春大红包新春大红包新春大红包新春大红包新春大红包新春大红包新春大红包新春大红包新春大红包新春大红包新春大红包</p>
-                <a class="foldbox-morebtn" href="#"><i class="iconfont">&#xe61e;</i></a>
+            <div class="userinfobox-btns flex">
+                <a href="#" class="userinfobox-btnitem flex-1"><i class="iconfont">&#xe61b;</i>50<br>我的喜欢</a>
+                <a href="#" class="userinfobox-btnitem flex-1"><i class="iconfont">&#xe61c;</i>500<br>我的粉丝</a>
+                <a href="#" class="userinfobox-btnitem flex-1"><i class="iconfont">&#xe625;</i>65<br>我的评价</a>
             </div>
         </div>
 
         <div class="margin-top"></div>
         <div class="panel box">
-            <h3 class="title">ta的制作组单</h3>
+            <h3 class="title">每日影响</h3>
+            <div class="list task-list">
+                <a class="item flex" href="#">
+                    <span class="text-score">+10</span>
+                    <div class="task-content flex-1">每天访问 1/5</div>
+                    <span class="text-status">未完成</span>
+                </a>
+                <a class="item flex" href="#">
+                    <span class="text-score">+10</span>
+                    <div class="task-content flex-1">每天访问 1/5</div>
+                    <span class="text-status disable">已完成</span>
+                </a>
+            </div>
+        </div>
+
+        <div class="margin-top"></div>
+        <div class="panel box">
+            <h3 class="title">我的制作组单</h3>
             <div class="list">
                 <a class="item flex flex-align-center" href="{:UC('Index/groupinfo')}">
                     <img src="__PUBLIC__/images/head.jpg" class="item-img">
