--- a/Application/Phone/View/template/main.html
+++ b/Application/Phone/View/template/main.html
@@ -7,14 +7,12 @@
     <title>北流商业平台</title>
     <link href="__PUBLIC__/css/normalize.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/weui.min.css">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/app.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/app.css?v=15">
     <block name="css"></block>
 </head>
 
 <body>
     <block name="content"></block>
-
-
     <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
     <block name="script"></block>
 </body>
