--- a/Application/Phone/View/Index/index.html
+++ b/Application/Phone/View/Index/index.html
@@ -172,7 +172,7 @@
             <a class="footer-menu-item hover" href="#"><i class="iconfont">&#xe609;</i><br>首页</a>
             <a class="footer-menu-item" href="#"><i class="iconfont">&#xe611;</i><br>排行榜</a>
             <a class="footer-menu-item" href="#"><i class="iconfont">&#xe600;</i><br>发布</a>
-            <a class="footer-menu-item" href="#"><i class="iconfont">&#xe60e;</i><br>个人中心</a>
+            <a class="footer-menu-item" href="{:UC('User/index')}"><i class="iconfont">&#xe60e;</i><br>个人中心</a>
         </div>
         <!-- footer end -->
 
