--- a/Application/Phone/View/Index/index.html
+++ b/Application/Phone/View/Index/index.html
@@ -3,7 +3,7 @@
 <block name="css">
     <link rel="stylesheet" href="__PUBLIC__/css/swiper.min.css">
     <style>
-        .swiper-pagination-bullet-active{background: red;}
+        .swiper-pagination-bullet-active{background: #04be02;}
     </style>
 </block>
 
