--- a/Application/Phone/View/User/index.html
+++ b/Application/Phone/View/User/index.html
@@ -43,7 +43,7 @@
                 <h3>影响力:55664分</h3>
             </div>
             <div class="userinfobox-btns flex">
-                <a href="#" class="userinfobox-btnitem flex-1"><i class="iconfont">&#xe61b;</i>50<br>我的喜欢</a>
+                <a href="{:UC('User/mycollection')}" class="userinfobox-btnitem flex-1"><i class="iconfont">&#xe61b;</i>50<br>我的收藏</a>
                 <a href="#" class="userinfobox-btnitem flex-1"><i class="iconfont">&#xe61c;</i>500<br>我的粉丝</a>
                 <a href="#" class="userinfobox-btnitem flex-1"><i class="iconfont">&#xe625;</i>65<br>我的评价</a>
             </div>
