--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -95,12 +95,14 @@ a{color: #333;text-decoration: none;}
 .list .item.table-item > .item-info{display: table-cell;vertical-align: middle;width: 100%;}
 .list .item.table-item > .item-icon-forward{display: table-cell;}
 
+.nocontent{display: block;text-align: center;color: #666;}
+.nocontent > a{color: #007aff;}
 
 .mask{position: fixed;width: 100%;height: 100%;background:rgba(0,0,0,0.8);background:#000\9;top:0;left:0;filter:alpha(opacity=20)\9;}
 
 .footer-menu{background: #fff;}
-.footer-menu .footer-menu-item{display: block;width: 25%;float: left;text-align: center;color: #666666;padding: 10px 0;}
-.footer-menu .footer-menu-item.hover{color:red;}
+.footer-menu .footer-menu-item{display: block;width: 25%;float: left;text-align: center;color: #666666;padding: 5px 0;font-size: 12px;}
+.footer-menu .footer-menu-item.hover{color:#04be02;}
 
 .topnavbar{position: fixed;top:0;left: 0;width: 100%;padding: 11px 0;background: #04be02;z-index: 5;}
 .topnavbar .backbtn{color: #fff;padding: 0 10px;display: inline-block;vertical-align: middle;}
@@ -116,13 +118,13 @@ a{color: #333;text-decoration: none;}
 
 .index-cate{padding: 10px 0;}
 .index-cate-item{float: left;padding: 10px;width: 25%;text-align: center;display: inline-block;}
-.index-cate-item i{color: red;}
+.index-cate-item i{color: #04be02;}
 
 .box{padding-top:10px; }
 .box > h3{padding:0 10px 10px 10px;color: #aaa;border-bottom: solid 1px #eee;}
 .box > h3.title:before{content: "\007c";display: inline-block;color: #04be02;margin-right: 5px;}
 .box > h3 .morebtn{float: right;font-size: 12px;font-weight: lighter;}
-.box > h3 i{color: red;}
+.box > h3 i{color: #04be02;}
 .box > .content{padding: 5px 0;}
 
 .bannerbox{width: 100%;}
